Auto generated property views! First big win!