@@ -4,55 +4,52 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 import net.xaethos.tabby.halbuilder.DefaultRepresentationFactory;
-
+import net.xaethos.tabby.halbuilder.impl.representations.ParcelableReadableRepresentation;
 import android.util.Log;
 
-import com.theoryinpractise.halbuilder.api.ReadableRepresentation;
-import com.theoryinpractise.halbuilder.api.RepresentationFactory;
+public class ApiRequest
+{
+    private static final String TAG = "ApiRequest";
 
-public class ApiRequest {
-	private static final String TAG = "ApiRequest";
+    private static final URI API_ROOT = URI.create("http://haltalk.herokuapp.com");
 
-	private static final String API_ROOT = "http://haltalk.herokuapp.com";
+    public static ParcelableReadableRepresentation get(URI uri) throws IOException {
+        Log.i(TAG, "Starting GET " + uri);
 
-	public static ReadableRepresentation get(String path) throws IOException {
-		Log.i(TAG, "Starting GET " + path);
+        if (!uri.isAbsolute()) {
+            uri = API_ROOT.resolve(uri);
+        }
 
-		URL url;
-		ReadableRepresentation representation;
+        ParcelableReadableRepresentation representation;
 
-		try {
-			url = new URL(API_ROOT + path);
-		} catch (MalformedURLException e) {
-			throw new RuntimeException(e);
-		}
+        HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
+        conn.setRequestProperty("X-Requested-With", "XMLHttpRequest");
+        conn.setRequestProperty("Accept", "application/hal+json, application/json, */*; q=0.01");
 
-		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-		conn.setRequestProperty("X-Requested-With", "XMLHttpRequest");
-		conn.setRequestProperty("Accept",
-				"application/hal+json, application/json, */*; q=0.01");
+        int responseCode = conn.getResponseCode();
+        if (responseCode < 200 || responseCode >= 300) {
+            Log.e(TAG, "GET " + uri + " failed with: " + responseCode + " " + conn.getResponseMessage());
+            return null;
+        }
 
-		int responseCode = conn.getResponseCode();
-		if (responseCode < 200 || responseCode >= 300) {
-			Log.e(TAG, "GET " + path + " failed with: " + responseCode + " "
-					+ conn.getResponseMessage());
-			return null;
-		}
+        DefaultRepresentationFactory factory = new DefaultRepresentationFactory();
+        InputStream in = conn.getInputStream();
 
-		RepresentationFactory factory = new DefaultRepresentationFactory();
-		InputStream in = conn.getInputStream();
+        try {
+            representation = factory.readRepresentation(new InputStreamReader(in));
+        }
+        finally {
+            in.close();
+        }
 
-		try {
-			representation = factory.readRepresentation(new InputStreamReader(in));
-		} finally {
-			in.close();
-		}
+        return representation;
+    }
 
-		return representation;
-	}
+    public static ParcelableReadableRepresentation get(String path) throws IOException {
+        return get(URI.create(path));
+    }
 
 }
